--- a/Code/Convert mat file to Excel and Fix Paths.ipynb
+++ b/Code/Convert mat file to Excel and Fix Paths.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert mat file to Excel\n",
+    "# Convert mat file to Excel and Fix Paths\n",
     "\n",
-    "Convert default cars .mat file to Excel format."
+    "Convert default cars .mat file to Excel format.\n",
+    "\n",
+    "Fix image paths to conform with folder structure."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -7252,7 +7254,7 @@
        "  'smart fortwo Convertible 2012']}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7265,7 +7267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -7290,7 +7292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -7456,7 +7458,7 @@
        "[16185 rows x 7 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7470,7 +7472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -7564,7 +7566,7 @@
        "[196 rows x 1 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7577,7 +7579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7589,7 +7591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -7780,7 +7782,7 @@
        "[16185 rows x 8 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7793,7 +7795,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bbox_x1</th>\n",
+       "      <th>bbox_y1</th>\n",
+       "      <th>bbox_x2</th>\n",
+       "      <th>bbox_y2</th>\n",
+       "      <th>class</th>\n",
+       "      <th>test</th>\n",
+       "      <th>class_name</th>\n",
+       "      <th>im_path</th>\n",
+       "      <th>filename_only</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>112</td>\n",
+       "      <td>7</td>\n",
+       "      <td>853</td>\n",
+       "      <td>717</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AM General Hummer SUV 2000</td>\n",
+       "      <td>/Box/INFO 290T Project/Raw Data/Stanford Car D...</td>\n",
+       "      <td>00001.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>441</td>\n",
+       "      <td>202</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AM General Hummer SUV 2000</td>\n",
+       "      <td>/Box/INFO 290T Project/Raw Data/Stanford Car D...</td>\n",
+       "      <td>00002.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>277</td>\n",
+       "      <td>180</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AM General Hummer SUV 2000</td>\n",
+       "      <td>/Box/INFO 290T Project/Raw Data/Stanford Car D...</td>\n",
+       "      <td>00003.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>50</td>\n",
+       "      <td>197</td>\n",
+       "      <td>150</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AM General Hummer SUV 2000</td>\n",
+       "      <td>/Box/INFO 290T Project/Raw Data/Stanford Car D...</td>\n",
+       "      <td>00004.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>83</td>\n",
+       "      <td>58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AM General Hummer SUV 2000</td>\n",
+       "      <td>/Box/INFO 290T Project/Raw Data/Stanford Car D...</td>\n",
+       "      <td>00005.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16180</th>\n",
+       "      <td>38</td>\n",
+       "      <td>36</td>\n",
+       "      <td>375</td>\n",
+       "      <td>234</td>\n",
+       "      <td>196</td>\n",
+       "      <td>1</td>\n",
+       "      <td>smart fortwo Convertible 2012</td>\n",
+       "      <td>/Box/INFO 290T Project/Raw Data/Stanford Car D...</td>\n",
+       "      <td>16181.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16181</th>\n",
+       "      <td>29</td>\n",
+       "      <td>34</td>\n",
+       "      <td>235</td>\n",
+       "      <td>164</td>\n",
+       "      <td>196</td>\n",
+       "      <td>1</td>\n",
+       "      <td>smart fortwo Convertible 2012</td>\n",
+       "      <td>/Box/INFO 290T Project/Raw Data/Stanford Car D...</td>\n",
+       "      <td>16182.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16182</th>\n",
+       "      <td>25</td>\n",
+       "      <td>32</td>\n",
+       "      <td>587</td>\n",
+       "      <td>359</td>\n",
+       "      <td>196</td>\n",
+       "      <td>1</td>\n",
+       "      <td>smart fortwo Convertible 2012</td>\n",
+       "      <td>/Box/INFO 290T Project/Raw Data/Stanford Car D...</td>\n",
+       "      <td>16183.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16183</th>\n",
+       "      <td>56</td>\n",
+       "      <td>60</td>\n",
+       "      <td>208</td>\n",
+       "      <td>186</td>\n",
+       "      <td>196</td>\n",
+       "      <td>1</td>\n",
+       "      <td>smart fortwo Convertible 2012</td>\n",
+       "      <td>/Box/INFO 290T Project/Raw Data/Stanford Car D...</td>\n",
+       "      <td>16184.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16184</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>200</td>\n",
+       "      <td>131</td>\n",
+       "      <td>196</td>\n",
+       "      <td>1</td>\n",
+       "      <td>smart fortwo Convertible 2012</td>\n",
+       "      <td>/Box/INFO 290T Project/Raw Data/Stanford Car D...</td>\n",
+       "      <td>16185.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16185 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       bbox_x1  bbox_y1  bbox_x2  bbox_y2  class  test  \\\n",
+       "0          112        7      853      717      1     0   \n",
+       "1           48       24      441      202      1     0   \n",
+       "2            7        4      277      180      1     0   \n",
+       "3           33       50      197      150      1     0   \n",
+       "4            5        8       83       58      1     0   \n",
+       "...        ...      ...      ...      ...    ...   ...   \n",
+       "16180       38       36      375      234    196     1   \n",
+       "16181       29       34      235      164    196     1   \n",
+       "16182       25       32      587      359    196     1   \n",
+       "16183       56       60      208      186    196     1   \n",
+       "16184        1        1      200      131    196     1   \n",
+       "\n",
+       "                          class_name  \\\n",
+       "0         AM General Hummer SUV 2000   \n",
+       "1         AM General Hummer SUV 2000   \n",
+       "2         AM General Hummer SUV 2000   \n",
+       "3         AM General Hummer SUV 2000   \n",
+       "4         AM General Hummer SUV 2000   \n",
+       "...                              ...   \n",
+       "16180  smart fortwo Convertible 2012   \n",
+       "16181  smart fortwo Convertible 2012   \n",
+       "16182  smart fortwo Convertible 2012   \n",
+       "16183  smart fortwo Convertible 2012   \n",
+       "16184  smart fortwo Convertible 2012   \n",
+       "\n",
+       "                                                 im_path filename_only  \n",
+       "0      /Box/INFO 290T Project/Raw Data/Stanford Car D...     00001.jpg  \n",
+       "1      /Box/INFO 290T Project/Raw Data/Stanford Car D...     00002.jpg  \n",
+       "2      /Box/INFO 290T Project/Raw Data/Stanford Car D...     00003.jpg  \n",
+       "3      /Box/INFO 290T Project/Raw Data/Stanford Car D...     00004.jpg  \n",
+       "4      /Box/INFO 290T Project/Raw Data/Stanford Car D...     00005.jpg  \n",
+       "...                                                  ...           ...  \n",
+       "16180  /Box/INFO 290T Project/Raw Data/Stanford Car D...     16181.jpg  \n",
+       "16181  /Box/INFO 290T Project/Raw Data/Stanford Car D...     16182.jpg  \n",
+       "16182  /Box/INFO 290T Project/Raw Data/Stanford Car D...     16183.jpg  \n",
+       "16183  /Box/INFO 290T Project/Raw Data/Stanford Car D...     16184.jpg  \n",
+       "16184  /Box/INFO 290T Project/Raw Data/Stanford Car D...     16185.jpg  \n",
+       "\n",
+       "[16185 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fix image paths\n",
+    "base_path = '/Box/INFO 290T Project/Raw Data/Stanford Car Dataset/'\n",
+    "# Next part of path - 'cars_test/cars_test/' or 'cars_train/cars_train/' based on test column\n",
+    "# Replace relative_im_path with base_path + next part of path + relative_im_path with 'cars_ims/' stripped off\n",
+    "df['im_path'] = base_path + df['test'].map(lambda x: 'cars_test/cars_test/' if x == 1 else 'cars_train/cars_train/') + df['relative_im_path'].map(lambda x: x.split('/')[-1][1:])\n",
+    "# Alsa save column of filename_only\n",
+    "df['filename_only'] = df['relative_im_path'].map(lambda x: x.split('/')[-1][1:])\n",
+    "# Drop relative_im_path\n",
+    "df.drop(columns='relative_im_path', inplace=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
