finished pieces for proposal

--- a/Code/Data Loading and Cleaning/Combine and Clean Class Information.ipynb
+++ b/Code/Data Loading and Cleaning/Combine and Clean Class Information.ipynb
@@ -20,7 +20,10 @@
     "# Package to load .mat\n",
     "import pandas as pd\n",
     "import os\n",
-    "import mat4py"
+    "import mat4py\n",
+    "# Set seed\n",
+    "import numpy as np\n",
+    "np.random.seed(290)"
    ]
   },
   {
@@ -8703,7 +8706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -8809,7 +8812,7 @@
        "[196 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8823,7 +8826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -9100,7 +9103,7 @@
        "[16185 rows x 13 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9118,12 +9121,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### New Proposed Train-Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "test_80_20\n",
+       "0    12930\n",
+       "1     3255\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set proposed_new_test to 1 in 80 percent of rows (randomly selected)\n",
+    "df_with_proposed_classes['test_80_20'] = np.random.choice([0, 1], size=(len(df_with_proposed_classes),), p=[0.8, 0.2])\n",
+    "\n",
+    "df_with_proposed_classes['test_80_20'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Save final data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
