--- a/Code/Exploratory Data Analysis/Bounding Box Resolution Statistics.ipynb
+++ b/Code/Exploratory Data Analysis/Bounding Box Resolution Statistics.ipynb
@@ -837,6 +837,34 @@
     "\n",
     "selected_classes_description"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overall Stats After Resolution Restriction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Describe items in selected_classes\n",
+    "selected_classes_df_res_restricted = selected_classes_df[(selected_classes_df['height'] > 200) | (selected_classes_df['width'] > 350)]\n",
+    "selected_classes_description_res_restricted = (selected_classes_df_res_restricted[['width', 'height', 'num_pixels']].rename(columns = {'width': 'Width', 'height': 'Height', 'num_pixels': 'Number of Pixels'}).describe().T\n",
+    "                                                                                       .rename(columns={'count': 'Count', 'mean': 'Mean', 'std': 'Standard Deviation', 'min': 'Minimum', '25%': '25th Percentile', '50%': '50th Percentile', '75%': '75th Percentile', 'max': 'Maximum'})\n",
+    "                                                                                       .style\n",
+    "                                                                                       .format(precision=2, thousands=\",\", decimal=\".\")\n",
+    "                                                                                       .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                                                                                       .set_properties(**{'text-align': 'center'}))\n",
+    "\n",
+    "# Export\n",
+    "dfi.export(selected_classes_description_res_restricted, '../../Output/Bounding Box Resolution Statistics/Bounding_Box_Selected_Classes_Description_Res_Restricted.png')\n",
+    "\n",
+    "selected_classes_description_res_restricted"
+   ]
   }
  ],
  "metadata": {
