create resized images

--- a/Code/Data Loading and Cleaning/Create Selected Images.ipynb
+++ b/Code/Data Loading and Cleaning/Create Selected Images.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "[16185 rows x 14 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
        "[8441 rows x 14 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -687,14 +687,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to copy images:  269.9259567260742\n"
+      "Time to clear directories in min:  0.2725918054580688\n",
+      "Time to copy images in min:  2.324874917666117\n"
      ]
     }
    ],
@@ -720,12 +721,13 @@
     "        destination = os.path.expanduser('~') + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/train/\" + Class + \"_train_\" + start_filename\n",
     "        shutil.copy(source, destination)\n",
     "        new_file_names.append(Class + \"_train_\" + start_filename)\n",
+    "        new_file_paths.append(\"~\" + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/train/\" + Class + \"_train_\" + start_filename)\n",
     "    else:\n",
     "        source = os.path.expanduser('~') + start_im_path\n",
     "        destination = os.path.expanduser('~') + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/test/\" + Class + \"_test_\" + start_filename\n",
     "        shutil.copy(source, destination)\n",
     "        new_file_names.append(Class + \"_test_\" + start_filename)\n",
-    "    new_file_paths.append(destination)\n",
+    "        new_file_paths.append(\"~\" + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/test/\" + Class + \"_test_\" + start_filename)\n",
     "# end timer\n",
     "end = time.time()\n",
     "print(\"Time to copy images in min: \", (end - start) / 60)"
@@ -740,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
