need to fix resizing code to run for all images but did split it into new file

--- a/Code/Data Loading and Cleaning/Resize Selected Images.ipynb
+++ b/Code/Data Loading and Cleaning/Resize Selected Images.ipynb
@@ -21,15 +21,12 @@
    "source": [
     "# Packages\n",
     "import pandas as pd\n",
-    "#import openpyxl\n",
     "import os\n",
     "import shutil\n",
     "import time\n",
-    "import cv2\n",
-    "#import random\n",
-    "# Convolution for blurring\n",
-    "import numpy as np\n",
-    "from scipy import ndimage"
+    "\n",
+    "# Importing the image processing functions\n",
+    "from Image_Processing import *"
    ]
   },
   {
@@ -623,52 +620,6 @@
    "metadata": {},
    "source": [
     "## Load Image, Resize, and Save"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to resize images\n",
-    "# If both dimensions larger than 260 (256 but adding some padding), downsample so the smaller dimension is 260\n",
-    "# Crop the center 256x256 pixels and return image\n",
-    "def resize_image(image):\n",
-    "    # Load width and height\n",
-    "    width = image.shape[1]\n",
-    "    height = image.shape[0]\n",
-    "    # Check if both dimensions are larger than 260\n",
-    "    if width > 260 and height > 260:\n",
-    "        # Determine scaling factor needed to make the smaller dimension 260\n",
-    "        scale_factor = 260 / min(width, height)\n",
-    "        # Add blur to image to handle aliasing\n",
-    "        image = ndimage.gaussian_filter(image, sigma=0.75)\n",
-    "        # Scale image\n",
-    "        image = cv2.resize(image, dsize=None, fx=scale_factor, fy=scale_factor, interpolation=cv2.INTER_LINEAR)\n",
-    "    # Otherwise: still add some Gaussian blur to handle aliasing (not as optimal as the downsampling case, but still better than nothing)\n",
-    "    else:\n",
-    "        image = ndimage.gaussian_filter(image, sigma=0.75)\n",
-    "    # Crop center 256x256 pixels\n",
-    "    resized_image = image[int((image.shape[0] - 256) / 2):int((image.shape[0] + 256) / 2), int((image.shape[1] - 256) / 2):int((image.shape[1] + 256) / 2)]\n",
-    "    return resized_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to process an image\n",
-    "def process_image(row):\n",
-    "    # Load image\n",
-    "    image = cv2.imread(os.path.expanduser(row['source_file_path']))\n",
-    "    #print('loaded ', row['source_file_path'])\n",
-    "    # Resize image\n",
-    "    resized_image = resize_image(image)\n",
-    "    # Save image\n",
-    "    cv2.imwrite(os.path.expanduser(row['destination_file_path']), resized_image)"
    ]
   },
   {
