better file path setup

--- a/Code/Data Loading and Cleaning/Resize Selected Images.ipynb
+++ b/Code/Data Loading and Cleaning/Resize Selected Images.ipynb
@@ -699,7 +699,7 @@
     "\n",
     "# Iterate through the sample and process each image\n",
     "for _, row in resizing_sample.iterrows():\n",
-    "    process_image(row)\n",
+    "    process_image(row['source_file_path'], row['destination_file_path'])\n",
     "\n",
     "# End timing run\n",
     "sample_end_time = time.time()\n",
@@ -737,7 +737,7 @@
     "\n",
     "# Iterate through the full set and process each image\n",
     "for _, row in selected_cars_annos_resizable.iterrows():\n",
-    "    process_image(row)\n",
+    "    process_image(row['source_file_path'], row['destination_file_path'])\n",
     "\n",
     "# End timer\n",
     "full_end_time = time.time()\n",
