need to determine missing items

--- a/Code/Data Loading and Cleaning/Resize Selected Images.ipynb
+++ b/Code/Data Loading and Cleaning/Resize Selected Images.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "[8441 rows x 13 columns]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "[8252 rows x 13 columns]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -659,14 +659,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_13480\\2184084106.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_16304\\719799075.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -678,8 +678,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample time taken:  0.006782456239064535  minutes\n",
-      "Full run time estimated:  5.596882888476054  minutes\n"
+      "Sample time taken:  0.005861934026082357  minutes\n",
+      "Full run time estimated:  4.837267958323161  minutes\n"
      ]
     }
    ],
@@ -722,16 +722,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full time taken:  9.286763779322307  minutes\n"
+     ]
+    }
+   ],
    "source": [
     "# Clear full directory\n",
     "shutil.rmtree(os.path.expanduser(\"~/Box/INFO 290T Project/Intermediate Data/Resized Images/\"), ignore_errors=True)\n",
     "# Make subdirectories\n",
     "os.makedirs(os.path.expanduser(\"~/Box/INFO 290T Project/Intermediate Data/Resized Images/train\"), exist_ok=True)\n",
-    "os.makedirs(os.path.expanduser(\"~/Box/INFO 290T Project/Intermediate Data/Resized Images/test\"), exist_ok=True)\n",
-    "\n",
+    "os.makedirs(os.path.expanduser(\"~/Box/INFO 290T Project/Intermediate Data/Resized Images/test\"), exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Start timer\n",
     "full_start_time = time.time()\n",
     "\n",
@@ -747,6 +762,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of files to resize:  8252\n",
+      "number of resized files:  7820\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check success of operation - number of files in the source and destination directories\n",
+    "print('number of files to resize: ', len(selected_cars_annos_resizable))\n",
+    "print('number of resized files: ', len(os.listdir(os.path.expanduser(\"~/Box/INFO 290T Project/Intermediate Data/Resized Images/train\"))) + len(os.listdir(os.path.expanduser(\"~/Box/INFO 290T Project/Intermediate Data/Resized Images/test\"))))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -755,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1104,7 @@
        "[8252 rows x 15 columns]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1307,7 @@
        "[8252 rows x 7 columns]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
