--- a/Code/Data Loading and Cleaning/Resize Selected Images.ipynb
+++ b/Code/Data Loading and Cleaning/Resize Selected Images.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "[8441 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "[8252 rows x 13 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -771,14 +771,16 @@
      "output_type": "stream",
      "text": [
       "number of files to resize:  8252\n",
-      "number of resized files:  7820\n"
+      "number of resized files:  128\n",
+      "items above 260 w and h:  8232\n"
      ]
     }
    ],
    "source": [
     "# Check success of operation - number of files in the source and destination directories\n",
     "print('number of files to resize: ', len(selected_cars_annos_resizable))\n",
-    "print('number of resized files: ', len(os.listdir(os.path.expanduser(\"~/Box/INFO 290T Project/Intermediate Data/Resized Images/train\"))) + len(os.listdir(os.path.expanduser(\"~/Box/INFO 290T Project/Intermediate Data/Resized Images/test\"))))"
+    "print('number of resized files: ', len(os.listdir(os.path.expanduser(\"~/Box/INFO 290T Project/Intermediate Data/Resized Images/train\"))) + len(os.listdir(os.path.expanduser(\"~/Box/INFO 290T Project/Intermediate Data/Resized Images/test\"))))\n",
+    "print('items above 260 w and h: ', len(selected_cars_annos_resizable.query('width > 260 and height > 260')))"
    ]
   },
   {
