--- a/Code/Data Loading and Cleaning/Resize Selected Images.ipynb
+++ b/Code/Data Loading and Cleaning/Resize Selected Images.ipynb
@@ -26,7 +26,7 @@
     "import time\n",
     "\n",
     "# Importing the image processing functions\n",
-    "from Image_Processing import *"
+    "from Image_Processing_Functions import *"
    ]
   },
   {
