substantial debug and resizing edits

--- a/Code/Data Loading and Cleaning/Create Selected Images.ipynb
+++ b/Code/Data Loading and Cleaning/Create Selected Images.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,13 @@
     "import openpyxl\n",
     "import os\n",
     "import shutil\n",
-    "import time"
+    "import time\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +319,7 @@
        "[16185 rows x 14 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +649,7 @@
        "[8441 rows x 14 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,6 +662,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "orig_train_or_test\n",
+       "train    4259\n",
+       "test     4182\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Variable for originally train or test\n",
+    "limited_cars_annos['orig_train_or_test'] = np.where(limited_cars_annos['test'] == 0, 'train', 'test')\n",
+    "limited_cars_annos['orig_train_or_test'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -669,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -687,15 +713,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to clear directories in min:  0.2725918054580688\n",
-      "Time to copy images in min:  2.324874917666117\n"
+      "Time to clear directories in min:  0.4129888852437337\n",
+      "Time to copy images in min:  3.093318498134613\n"
      ]
     }
    ],
@@ -715,19 +741,21 @@
     "print(\"Time to clear directories in min: \", (end - start) / 60)\n",
     "# start timer\n",
     "start = time.time()\n",
-    "for start_im_path, start_filename, test_80_20_val, Class in limited_cars_annos[['im_path', 'filename', 'test_80_20', 'Class']].itertuples(index=False):\n",
+    "for start_im_path, start_filename, test_80_20_val, Class, orig_train_or_test in limited_cars_annos[['im_path', 'filename', 'test_80_20', 'Class', 'orig_train_or_test']].itertuples(index=False):\n",
     "    if test_80_20_val == 0:\n",
     "        source = os.path.expanduser('~') + start_im_path\n",
-    "        destination = os.path.expanduser('~') + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/train/\" + Class + \"_train_\" + start_filename\n",
+    "        new_file_name = Class + \"_train_orig_\" + orig_train_or_test + \"_\" + start_filename\n",
+    "        destination = os.path.expanduser('~') + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/train/\" + new_file_name\n",
     "        shutil.copy(source, destination)\n",
-    "        new_file_names.append(Class + \"_train_\" + start_filename)\n",
-    "        new_file_paths.append(\"~\" + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/train/\" + Class + \"_train_\" + start_filename)\n",
+    "        new_file_names.append(new_file_name)\n",
+    "        new_file_paths.append(\"~\" + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/train/\" + new_file_name)\n",
     "    else:\n",
     "        source = os.path.expanduser('~') + start_im_path\n",
-    "        destination = os.path.expanduser('~') + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/test/\" + Class + \"_test_\" + start_filename\n",
+    "        new_file_name = Class + \"_test_orig_\" + orig_train_or_test + \"_\" + start_filename\n",
+    "        destination = os.path.expanduser('~') + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/test/\" + new_file_name\n",
     "        shutil.copy(source, destination)\n",
-    "        new_file_names.append(Class + \"_test_\" + start_filename)\n",
-    "        new_file_paths.append(\"~\" + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/test/\" + Class + \"_test_\" + start_filename)\n",
+    "        new_file_names.append(new_file_name)\n",
+    "        new_file_paths.append(\"~\" + \"/Box/INFO 290T Project/Intermediate Data/Selected Images/test/\" + new_file_name)\n",
     "# end timer\n",
     "end = time.time()\n",
     "print(\"Time to copy images in min: \", (end - start) / 60)"
@@ -742,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
