--- a/Code/Feature Construction/Color Histograms/Ash-HSV-Histogram-Analysis.ipynb
+++ b/Code/Feature Construction/Color Histograms/Ash-HSV-Histogram-Analysis.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "#viz train images \n",
     "train_images = load_images_from_folder('../../../Images/class samples/No Blur/Single_Samples')\n",
-    "plot_images_in_grid(train_images, 'Train Images')"
+    "plot_images_in_grid(train_images, 'Sample Images')"
    ]
   },
   {
