complete train set visualization code

--- a/Code/Feature Construction/Combine All Features/Combine All Features.ipynb
+++ b/Code/Feature Construction/Combine All Features/Combine All Features.ipynb
@@ -35,6 +35,9 @@
    "outputs": [],
    "source": [
     "def combine_directory_parquets(directory_path):\n",
+    "    '''\n",
+    "    Combines all parquet files in a directory into a single dataframe.\n",
+    "    '''\n",
     "    # If path does not end in a slash, add one\n",
     "    if directory_path[-1] != '/':\n",
     "        directory_path += '/'\n",
@@ -557,8 +560,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to split datasets further for GitHub\n",
     "def split_df(df, dataset_name, out_folder, num_pieces):\n",
+    "    '''\n",
+    "    Splits dataframes into num_pieces and saves them as parquet files in out_folder. Reduces file size to comply with GitHub limits.\n",
+    "    '''\n",
     "    # Tracking total length of pieces\n",
     "    total_len_pieces = 0\n",
     "    # Delete previous pieces, all contents of out_folder\n",
