add file saving

--- a/Code/Dimensionality Reduction and Visualization/PCA_tSNE_Train_Set.ipynb
+++ b/Code/Dimensionality Reduction and Visualization/PCA_tSNE_Train_Set.ipynb
@@ -784,6 +784,7 @@
     "  plt.xlabel('Number of Components')\n",
     "  plt.ylabel('Share of Variance Explained')\n",
     "  plt.legend()\n",
+    "  plt.savefig('../../Output/PCA and tSNE/PCA_variance_explained.png')\n",
     "  plt.show()\n",
     "\n",
     "def get_tsne(X_list, n_components=2):\n",
@@ -914,6 +915,8 @@
     "  plot_classes(pca_transformed_items[idx], y, ax[idx,0], title=feature_matrix_labels[idx] + ' PCA')\n",
     "  plot_classes(tsne_transformed_items[idx], y, ax[idx,1], title=feature_matrix_labels[idx] + ' tSNE')\n",
     "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('../../Output/PCA and tSNE/PCA_tSNE_Class_Discrinimability.png')\n",
     "plt.show()"
    ]
   }
