--- a/Code/Feature Construction/LBP/lbp.ipynb
+++ b/Code/Feature Construction/LBP/lbp.ipynb
@@ -249,7 +249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.16 64-bit",
+   "display_name": "Python 3.11.4",
    "language": "python",
    "name": "python3"
   },
@@ -263,12 +263,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a665b5d41d17b532ea9890333293a1b812fa0b73c9c25c950b3cedf1bebd0438"
+    "hash": "a7e314ba9f666ce3cc3d9c6ca90df4ff5d73fd085762bb8502c032e8e0761c3b"
    }
   }
  },
