--- a/Code/Data Loading and Cleaning/Relabeling/Relabeled_Test_No_Blur.ipynb
+++ b/Code/Data Loading and Cleaning/Relabeling/Relabeled_Test_No_Blur.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "[8252 rows x 9 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "[1656 rows x 9 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
        "[1656 rows x 2 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
        "5              Ambiguous      5"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
        "[1656 rows x 3 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
        "[1656 rows x 4 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,12 +1075,206 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Create Harmonized File Name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_harmonized_filename(file_path):\n",
+    "    '''\n",
+    "    Strip Blur vs. No Blur and other data from file path.\n",
+    "    '''\n",
+    "    # Split path by '/' and take last element\n",
+    "    harmonized_filename = file_path.split('/')[-1]\n",
+    "    # Remove _no_blur and _blurred from file name\n",
+    "    harmonized_filename = harmonized_filename.replace('_no_blur', '')\n",
+    "    harmonized_filename = harmonized_filename.replace('_blurred', '')\n",
+    "    # Return harmonized file name\n",
+    "    return harmonized_filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>label</th>\n",
+       "      <th>New Class</th>\n",
+       "      <th>Old Class</th>\n",
+       "      <th>harmonized_filename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Convertible_test_orig_test_00023_resized_no_bl...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Convertible</td>\n",
+       "      <td>Convertible</td>\n",
+       "      <td>Convertible_test_orig_test_00023_resized.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Convertible_test_orig_test_00096_resized_no_bl...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Convertible</td>\n",
+       "      <td>Convertible</td>\n",
+       "      <td>Convertible_test_orig_test_00096_resized.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Convertible_test_orig_test_00107_resized_no_bl...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Convertible</td>\n",
+       "      <td>Convertible</td>\n",
+       "      <td>Convertible_test_orig_test_00107_resized.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Convertible_test_orig_test_00135_resized_no_bl...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Convertible</td>\n",
+       "      <td>Convertible</td>\n",
+       "      <td>Convertible_test_orig_test_00135_resized.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Convertible_test_orig_test_00147_resized_no_bl...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Convertible</td>\n",
+       "      <td>Convertible</td>\n",
+       "      <td>Convertible_test_orig_test_00147_resized.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1651</th>\n",
+       "      <td>Sedan_test_orig_train_08026_resized_no_blur.jpg</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Ambiguous</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Sedan_test_orig_train_08026_resized.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1652</th>\n",
+       "      <td>Sedan_test_orig_train_08043_resized_no_blur.jpg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Sedan_test_orig_train_08043_resized.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1653</th>\n",
+       "      <td>Sedan_test_orig_train_08046_resized_no_blur.jpg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Sedan_test_orig_train_08046_resized.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1654</th>\n",
+       "      <td>Sedan_test_orig_train_08098_resized_no_blur.jpg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Sedan_test_orig_train_08098_resized.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1655</th>\n",
+       "      <td>Sedan_test_orig_train_08113_resized_no_blur.jpg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>Sedan_test_orig_train_08113_resized.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1656 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               filename  label    New Class  \\\n",
+       "0     Convertible_test_orig_test_00023_resized_no_bl...      2  Convertible   \n",
+       "1     Convertible_test_orig_test_00096_resized_no_bl...      2  Convertible   \n",
+       "2     Convertible_test_orig_test_00107_resized_no_bl...      2  Convertible   \n",
+       "3     Convertible_test_orig_test_00135_resized_no_bl...      2  Convertible   \n",
+       "4     Convertible_test_orig_test_00147_resized_no_bl...      2  Convertible   \n",
+       "...                                                 ...    ...          ...   \n",
+       "1651    Sedan_test_orig_train_08026_resized_no_blur.jpg      5    Ambiguous   \n",
+       "1652    Sedan_test_orig_train_08043_resized_no_blur.jpg      3        Sedan   \n",
+       "1653    Sedan_test_orig_train_08046_resized_no_blur.jpg      3        Sedan   \n",
+       "1654    Sedan_test_orig_train_08098_resized_no_blur.jpg      3        Sedan   \n",
+       "1655    Sedan_test_orig_train_08113_resized_no_blur.jpg      3        Sedan   \n",
+       "\n",
+       "        Old Class                           harmonized_filename  \n",
+       "0     Convertible  Convertible_test_orig_test_00023_resized.jpg  \n",
+       "1     Convertible  Convertible_test_orig_test_00096_resized.jpg  \n",
+       "2     Convertible  Convertible_test_orig_test_00107_resized.jpg  \n",
+       "3     Convertible  Convertible_test_orig_test_00135_resized.jpg  \n",
+       "4     Convertible  Convertible_test_orig_test_00147_resized.jpg  \n",
+       "...           ...                                           ...  \n",
+       "1651        Sedan       Sedan_test_orig_train_08026_resized.jpg  \n",
+       "1652        Sedan       Sedan_test_orig_train_08043_resized.jpg  \n",
+       "1653        Sedan       Sedan_test_orig_train_08046_resized.jpg  \n",
+       "1654        Sedan       Sedan_test_orig_train_08098_resized.jpg  \n",
+       "1655        Sedan       Sedan_test_orig_train_08113_resized.jpg  \n",
+       "\n",
+       "[1656 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use funciton on 'filename' column\n",
+    "merged['harmonized_filename'] = merged['filename'].apply(create_harmonized_filename)\n",
+    "merged"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Basic Analytics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
