--- a/Code/Classification/Logistic Regression/Logistic_Regression_Classifier_Predictions.ipynb
+++ b/Code/Classification/Logistic Regression/Logistic_Regression_Classifier_Predictions.ipynb
@@ -199,8 +199,6 @@
     "    # Return combined dataframe\n",
     "    return combined_df\n",
     "test_data = combine_directory_parquets('../../../Data/Features/All Features/test')\n",
-    "# Drop test_80_20, Class\n",
-    "test_data = test_data.drop(columns=['test_80_20', 'Class'])\n",
     "print('all test data')\n",
     "print(test_data)"
    ]
@@ -209,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load model from 'Best Logistic Regression Model.pkl'"
+    "## Load model from 'Best Logistic Regression Model.joblib'"
    ]
   },
   {
@@ -246,7 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = test_data.drop(columns=['Image Path'])\n"
+    "# Keep only numeric columns\n",
+    "X_test = test_data.select_dtypes(include=[int, float])\n"
    ]
   },
   {
@@ -309,7 +308,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data[['Image Path', 'Logistic_Regression_Classification']].to_excel('../../../Data/Predictions/Logistic Regression/Logistic_Regression_Classifier_Predictions.xlsx', index=False)"
+    "# Keep only string items in test_data\n",
+    "test_data = test_data[[col for col in test_data.columns if type(col) == str]]\n",
+    "\n",
+    "# Save to excel\n",
+    "test_data.to_excel('../../../Data/Predictions/Logistic Regression/Logistic_Regression_Classifier_Predictions.xlsx', index=False)"
    ]
   }
  ],
