--- a/Code/Feature Construction/Combine All Features/Combine All Features.ipynb
+++ b/Code/Feature Construction/Combine All Features/Combine All Features.ipynb
@@ -2223,7 +2223,9 @@
    ],
    "source": [
     "# Merge all dataframes on harmonized file name\n",
-    "all_features = vit_embeddings.merge(hog_16_ppc_vectors, on=['harmonized_filename', 'test_80_20'], how='inner').merge(hog_24_ppc_vectors, on=['harmonized_filename', 'test_80_20'], how='inner').merge(HSV_vectors, on=['harmonized_filename', 'test_80_20'], how='inner')\n",
+    "all_features = (vit_embeddings.merge(hog_16_ppc_vectors, on=['harmonized_filename', 'test_80_20'], how='inner')\n",
+    "                              .merge(hog_24_ppc_vectors, on=['harmonized_filename', 'test_80_20'], how='inner')\n",
+    "                              .merge(HSV_vectors, on=['harmonized_filename', 'test_80_20'], how='inner'))\n",
     "all_features"
    ]
   },
@@ -2873,6 +2875,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean Up Columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -3287,6 +3296,31 @@
     "all_features.drop(columns=image_path_columns, inplace=True)\n",
     "# Reorder columns\n",
     "all_features = all_features[['Class', 'harmonized_filename', 'test_80_20'] + [col for col in all_features.columns if col not in ['Class', 'harmonized_filename', 'test_80_20']]]\n",
+    "all_features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add Blur and No-Blur Paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def construct_path(train_test, blur_no_blur, harmonized_filename):\n",
+    "    return '../../../Images/' + train_test + '/' + blur_no_blur + '/' + harmonized_filename\n",
+    "\n",
+    "# Add image_path_blur column\n",
+    "all_features['image_path_blur'] = all_features.apply(lambda x: construct_path('train' if x['test_80_20'] == 0 else 'test', 'Blurred', x['harmonized_filename']), axis=1)\n",
+    "# Add image_path_no_blur column\n",
+    "all_features['image_path_no_blur'] = all_features.apply(lambda x: construct_path('train' if x['test_80_20'] == 0 else 'test', 'No_Blur', x['harmonized_filename']), axis=1)\n",
+    "# Reorder columns - Class, harmonized_filename, test_80_20, image_path_blur, image_path_no_blur, all other columns\n",
+    "all_features = all_features[['Class', 'harmonized_filename', 'test_80_20', 'image_path_blur', 'image_path_no_blur'] + [col for col in all_features.columns if col not in ['Class', 'harmonized_filename', 'test_80_20', 'image_path_blur', 'image_path_no_blur']]]\n",
     "all_features"
    ]
   },
@@ -14734,7 +14768,11 @@
    "source": [
     "# Split df into train and test\n",
     "all_features_train = all_features[all_features['test_80_20'] == 0]\n",
-    "all_features_test = all_features[all_features['test_80_20'] == 1]"
+    "all_features_test = all_features[all_features['test_80_20'] == 1]\n",
+    "\n",
+    "# Drop test_80_20 column\n",
+    "all_features_train.drop(columns='test_80_20', inplace=True)\n",
+    "all_features_test.drop(columns='test_80_20', inplace=True)"
    ]
   },
   {
