--- a/Code/Feature Construction/Combine All Features/Combine All Features.ipynb
+++ b/Code/Feature Construction/Combine All Features/Combine All Features.ipynb
@@ -3196,8 +3196,11 @@
     "# Merge on 'filename'\n",
     "all_features = all_features.merge(relabeled, on='harmonized_filename', how='left')\n",
     "# Replace Class with New Class if not missing\n",
-    "all_features['Class'] = all_features['New Class'].fillna(all_features['Class'])\n",
-    "# Drop label, New Class, filename, Old Class\n",
+    "all_features['Class With Ambiguous and None'] = all_features['New Class'].fillna(all_features['Class'])\n",
+    "# Create Corrected Old Class - Old Class, but replace with New Class if New Class is in 'SUV', 'Sedan', 'Pickup', 'Convertible'\n",
+    "all_features['Corrected Old Class'] = all_features['Old Class']\n",
+    "all_features.loc[all_features['New Class'].isin(['SUV', 'Sedan', 'Pickup', 'Convertible']), 'Corrected Old Class'] = all_features['New Class']\n",
+    "# Drop label, New Class, filename\n",
     "all_features.drop(columns=['label', 'New Class', 'filename', 'Old Class'], inplace=True)\n",
     "all_features"
    ]
